# dietsplash

./: .gitignore  Makefile.am  README  TODO  bootstrap  bootstrap-configure  configure.ac
data/default_anim/: 01.ppm  02.ppm  03.ppm  04.ppm  05.ppm
data/default_anim.old/: 01.ppm  02.ppm  03.ppm  04.ppm  05.ppm
data/default_animation/: desc.txt
data/default_animation/part0/: 01.ppm  02.ppm  04.ppm  05.ppm  07.ppm
m4/: attributes.m4  ax_prog_cc_for_build.m4
src/: .gitignore  animation.c  animation.h  dietsplash.c  dietsplashctl.c  events.c  events.h  fb.c  fb.h  genstaticlogo.c  log.c  log.h  main.c  pnmtologo.c  pnmtologo.h  util.c  util.h
units/: .gitignore  dietsplash-quit.service.in
